<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/wifi_connect_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:background="@drawable/txt_rectborder"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btn_param_setting"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/selector_btn_base"
        android:text="@string/param_setting"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_test_mode"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:background="@drawable/selector_btn_base"
        android:text="@string/test_mode"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_volume_adjust"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:background="@drawable/selector_btn_base"
        android:text="@string/volume_adjust"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_video"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:background="@drawable/selector_btn_base"
        android:text="@string/video"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:background="@drawable/selector_btn_base"
        android:text="@string/reset_device"
        android:textColor="@color/white"
        android:textSize="24sp" />
</LinearLayout>