<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gray2"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/infor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/video_message"/>

    <TextView
        android:id="@+id/play_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#ffffff00"/>

    <com.minicreate.adas.ui.widget.RadioGroupEx
        android:id="@+id/rgp_channel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40.0dip"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/btn_channel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dip"
            android:checked="false"
            android:text="ADAS通道"
            android:textSize="12sp"/>

        <RadioButton
            android:id="@+id/btn_channel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dip"
            android:text="DSM通道"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="11dp"
            android:text=""/>

    </com.minicreate.adas.ui.widget.RadioGroupEx>

    <com.minicreate.adas.ui.widget.VView
        android:id="@+id/decodeview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="80px"/>


    <LinearLayout
            android:id="@+id/ll_adas"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:orientation="horizontal"
            android:visibility="gone">
        <TextView
            android:id="@+id/tv_param_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/adas_param"
            android:textColor="#ffffff00"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_adas_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="12"
            android:digits="@string/filter_number_dot"
            android:layout_gravity="center_vertical|right"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_dsm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50px"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="gone">
        <TextView
            android:id="@+id/tv_angle_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text=""
            android:textColor="#ffffff00"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_sure"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/selector_btn_base"
        android:text="@string/sure"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:visibility="gone"/>

</LinearLayout>
